upd: валидация месяца + обработка ошибок по лучше
